crates/core-executor/src/tests/sql/ddl/snapshots/view/query_view_basic_creation.snap
---
source: crates/core-executor/src/tests/sql/ddl/view.rs
description: "\"SELECT * FROM view_test ORDER BY id\""
info: "Setup queries: CREATE VIEW view_test AS SELECT 1 AS id, 'Alice' AS name"
---
Ok(
    [
        "+----+-------+",
        "| id | name  |",
        "+----+-------+",
        "| 1  | Alice |",
        "+----+-------+",
    ],
)
